# DestinE_SPDT

./: .coverage  .gitignore  Dockerfile  LICENSE.md  README.md  compose.yaml  populateDB.py  pyproject.toml  requirements.txt  requirements2.txt  temp.txt  tox.ini
.github/workflows/: main.yml
ForProduction/: .gitignore  asyncTasks.py  compose.yaml  live_data.html  live_data.py  make_celery.py  notes for readme.txt
ForProduction/tests/: README_tests.md  test_fizzbuzz.py
backend/: placeholder.txt
data/global/: 1260  pg_control  pg_internal.init
data/pg_stat/: pgstat.stat
digitalTwin/: __init__.py  app.db  config.py  digitaltwin.py  dummyData.json  fizzbuzz.py
digitalTwin/ForProduction/: notes for readme.txt
digitalTwin/modelling/: agent.py  analyze.py  climate.py  config.py  config_defaults.yaml  energyABM.py  model copy.py  model.py
digitalTwin/models/: models.py
digitalTwin/routes/: Legacysubmit.py  climate.py  contact.py  createScenario.py  data_sources.py  help.py  manage_data.py  map.py  mpl_plots.py  policies.py  population.py  queue.py  reports.py  scenarios.py  settings.py  submit.py  user.py
digitalTwin/templates/: Legacy_create_scenario.html  _climateModelsManager.html  _footer.html  _navbar.html  _policyChoicesManager.html  _policySummary.html  _populationManager.html  _reports.html  _scenariosManager.html  _scenariosSummary.html  _sourceDataViewer.html  base.html  card-container.html  climate.html  contact.html  create_scenario.html  create_scenario_climate.html  create_scenario_copy.html  home.html  (+24 more)
tests/: .coverage  conftest.py  plan.md
(+87 files in other folders)
